--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
     <title>Sazid Restaurant</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header></header>
+
+      <nav></nav>
+      <main></main>
+
+      <footer></footer>
+    </div>
+  </body>
 </html>
