logo image added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   </head>
   <body>
     <div class="container">
-      <header></header>
+      <header>
+        <img
+          src="https://s.tmimgcdn.com/scr/800x500/212900/spoon-and-fork-restaurant-logo_212966-original.png"
+          alt="logo image"
+        />
+      </header>
 
       <nav></nav>
       <main></main>
