add link in main section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
           carefully designed to bring you a truly satisfying Irish food
           experience that you are sure to remember.
         </p>
+        <a href="https://lahainagrill.com/" target="_blank"
+          >MAKE RESERVATION
+        </a>
       </main>
 
       <footer></footer>
