--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         />
       </header>
 
-      <nav></nav>
+      <nav>
+        <a href="#">HOME</a>
+        <a href="#">MENU</a>
+        <a href="#">ORDER ONLINE</a>
+        <a href="#">GIFT VOUCHER</a>
+        <a href="#">CATERING</a>
+        <a href="#">CONTACT</a>
+      </nav>
       <main>
         <h1>let's eat</h1>
         <p>
