--- a/index.html
+++ b/index.html
@@ -37,7 +37,11 @@
         </a>
       </main>
 
-      <footer></footer>
+      <footer>
+        <p>
+          Main St, Blackabbey, Sazid Restaurant, Co. Limerick - Copyright 2022©
+        </p>
+      </footer>
     </div>
   </body>
 </html>
