--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           carefully designed to bring you a truly satisfying Irish food
           experience that you are sure to remember.
         </p>
-        <a href="https://lahainagrill.com/" target="_blank"
+        <a
+          href="mailto:nassirctg1234@gmail.com?Subject=Reservation"
+          target="_blank"
           >MAKE RESERVATION
         </a>
       </main>
